tests/baselines/reference/parserComputedPropertyName26(strict=true).errors.txt
parserComputedPropertyName26.ts(3,5): error TS1164: Computed property names are not allowed in enums.
parserComputedPropertyName26.ts(3,11): error TS7053: Element implicitly has an 'any' type because expression of type 'any' can't be used to index type 'Number'.
parserComputedPropertyName26.ts(4,6): error TS2304: Cannot find name 'e2'.


==== parserComputedPropertyName26.ts (3 errors) ====
    enum E {
        // No ASI
        [e] = 0
        ~~~
!!! error TS1164: Computed property names are not allowed in enums.
              ~
        [e2] = 1
    ~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'any' can't be used to index type 'Number'.
         ~~
!!! error TS2304: Cannot find name 'e2'.
    }